--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@babel/preset-env": "7.20.2",
     "body-parser": "1.20.1",
     "connect-redis": "6.1.3",
+    "cookie": "0.5.0",
     "dotenv": "16.0.3",
     "ejs": "3.1.8",
     "express": "4.18.2",
     "express-session": "1.17.3",
+    "formidable": "2.1.1",
     "msnodesqlv8": "2.7.0",
     "mssql": "9.0.1",
+    "multer": "1.4.5-lts.1",
     "nodemon": "2.0.20",
     "redis": "4.5.1"
   },
