--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@babel/core": "7.20.2",
     "@babel/node": "7.20.2",
     "@babel/preset-env": "7.20.2",
+    "app-root-path": "3.0.0",
     "body-parser": "1.20.1",
     "connect-redis": "6.1.3",
     "cookie": "0.5.0",
